<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/filterButton"
            android:text="@string/classification_eyes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/faceContourButton"
            android:layout_margin="16dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/faceContourButton"
            android:text="@string/face_contours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/orange_one"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/filterButton"
            app:layout_constraintBottom_toTopOf="@id/languageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/languageButton"
            android:text="@string/language_identification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/pink_one"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/chatAquaButton"
            app:layout_constraintTop_toBottomOf="@id/faceContourButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/chatAquaButton"
            android:text="@string/chat_as_aqua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_one"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/chatMeguminButton"
            app:layout_constraintTop_toBottomOf="@id/languageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/chatMeguminButton"
            android:text="@string/chat_as_megumin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow_one"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chatAquaButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>